@@ -1,5 +1,9 @@
 2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>
 
+	* ImageSelection-test/ImageSelection-test.m: Add a few more cases
+
+2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>
+
 	* ImageSelection-test/ImageSelection-test.m: Test drawing sub-
 	regions of images.
 
